--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,10 @@ This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
+This is my first website
+
+Lets see if this correctly renderd
+
 ```{r}
 1 + 1
 ```
