--- a/index.qmd
+++ b/index.qmd
@@ -6,9 +6,7 @@ This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
-This is my first website
-
-Lets see if this correctly renderd
+next try
 
 ```{r}
 1 + 1
