trying ouy functions

--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,9 @@
 ---
-title: "sebhanika.github.io"
+title: "Sebastian Hanika"
+image: mypic.png
+about:
+  template: jolla
+  image-shape: round
+  image-width: 15em
+
 ---
-
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-next try
-
-```{r}
-1 + 1
-```
