--- a/data_projects.qmd
+++ b/data_projects.qmd
@@ -3,3 +3,4 @@ title: Data Projects
 ---
 
 Here, I would like to share a collection of my data projects, ranging from those linked to my research and professional development to those created purely for fun.
+I want to link them below. 
