new render proj tab

--- a/teaching.qmd
+++ b/teaching.qmd
@@ -10,7 +10,7 @@ I began teaching at the university level in March 2023. Moving forward, my goal 
 
 ### Applied methods in planning
 
-I taught the module on Quantitative Methods and Statistics, which encompassed lectures, seminars, and lab exercises. Throughout the course, I delivered a total of 12 hours of in-classroom teaching. I also had responsibility for grading assignments and assessments.
+I taught the module on quantitative methods and statistics, which encompassed lectures, seminars, and lab exercises. Throughout the course, I delivered a total of 12 hours of in-classroom teaching. I also had responsibility for grading assignments and assessments.
 
 ## Supervision
 
