--- a/index.qmd
+++ b/index.qmd
@@ -15,15 +15,18 @@ page-layout: full
 toc: false
 ---
 
-I am a PhD student in Human Geography at Lund University, specializing in the intersection between Human Geography and demography. My research focuses on spatial variations in population aging and the labor market participation of older workers. I have a strong interest in quantitative methods, particularly R programming and GIS.
+I am a PhD student at the Department of Human Geography at Lund University, specializing in the intersection between Human Geography and demography.
 
-***
+My research focuses on spatial variations in population aging and labor market participation of older workers. I have a strong interest in quantitative methods, particularly R programming and GIS.
+
+------
 
 ## Education
 
 **Ph.D. in Human Geography**
 <br>Lund University, Sweden
 <br>[September 2022 - now]{.date}
+
 
 **M.Sc. in Demography**
 <br>Universitat Autònoma de Barcelona, Spain
