change to bullet points

--- a/index.qmd
+++ b/index.qmd
@@ -24,19 +24,22 @@ My research focuses on spatial variations in population aging and labor market p
 ## Education
 
 **Ph.D. in Human Geography**
-<br>Lund University, Sweden
-<br>[September 2022 - now]{.date}
 
+- Lund University, Sweden
+- Sept. 2022 - now
 
 **M.Sc. in Demography**
-<br>Universitat Autònoma de Barcelona, Spain
-<br>Euorepan Doctoral School of Dempgraphy
-<br>[September 2021 - July 20222]{.date}
+
+- Universitat Autònoma de Barcelona, Spain
+- Euorepan Doctoral School of Demography
+- Sept. 2021 - July 2022
 
 **M.Sc. in Human Geography**
-<br>Copenhagen University, Denmark
-<br>[September 2019 - June 2021]{.date}
+
+- Copenhagen University, Denmark
+- Sept. 2019 - June 2021
 
 **B.Sc. Geography and Economics**
-<br>Humboldt Universty Berlin, Germany
-<br>[September 2015 - June 2019]{.date}
+
+- Humboldt Universty Berlin, Germany
+- Sept. 2015 - June 2019
