change to bullet points

--- a/research.qmd
+++ b/research.qmd
@@ -7,16 +7,19 @@ My PhD research focuses on spatial variations in population aging and the labor 
 ## Research Experience
 
 **Euoprean Doctoral School of Demography**
-<br>Centre d'estudis Demogràfics
-<br>Research education in demography finsihed with a thesis on post-retirement employment in Germany
-<br>[September 2021 - July 20222]{.date}
+
+- Centre d'estudis Demogràfics
+- Research education in demography finsihed with a thesis on post-retirement employment in Germany
+- [September 2021 - July 20222]{.date}
 
 **Visiting Student**
-<br>Oxford Institue of Population Ageing, UK
-<br>Master’s thesis research on population ageing and local labor markets in Germany
-<br>[November 2020 - March 2022]{.date}
+
+- Oxford Institue of Population Ageing, UK
+- Master’s thesis research on population ageing and local labor markets in Germany
+- [November 2020 - March 2022]{.date}
 
 **NEURUS Prgoram**
-<br>University of Califorina Irvine, USA
-<br>Research on the development of cannabis-oriented business services in Los Angeles.
-<br>[Januar 2018 - May 2018]{.date}
+
+- University of Califorina Irvine, USA
+- Research on the development of cannabis-oriented business services in Los Angeles.
+- [Januar 2018 - May 2018]{.date}
