add EDSD thesis to teaching

--- a/teaching.qmd
+++ b/teaching.qmd
@@ -6,14 +6,18 @@ I began teaching at the university level in March 2023. Moving forward, my goal 
 
 # 2023
 
-## Courses
+## Courses - Lund University
 
 ### Applied methods in planning
 
 I taught the module on quantitative methods and statistics, which encompassed lectures, seminars, and lab exercises. Throughout the course, I delivered a total of 12 hours of in-classroom teaching. I also had responsibility for grading assignments and assessments.
 
-## Supervision
+## Supervision - Lund University
 
 ### Degree project in Human Geography
 
 I supervised two students for their degree projects in Human Geography as part of the SGEA23 course.
+
+## Thesis Evaluation - EDSD/CED
+
+I was a member of the evaluation committee of an oral thesis defense within the framework of the European Doctoral School of Demography (EDSD) at the Centre for Demographic Studies in Barcelona (Spain).
