--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ My research focuses on spatial variations in population aging and labor market p
 **M.Sc. in Demography**
 
 - Universitat Autònoma de Barcelona, Spain
-- Euorepan Doctoral School of Demography
+- European Doctoral School of Demography
 - Sept. 2021 - July 2022
 
 **M.Sc. in Human Geography**
@@ -41,5 +41,5 @@ My research focuses on spatial variations in population aging and labor market p
 
 **B.Sc. Geography and Economics**
 
-- Humboldt Universty Berlin, Germany
+- Humboldt University Berlin, Germany
 - Sept. 2015 - June 2019
