--- a/research.qmd
+++ b/research.qmd
@@ -6,20 +6,20 @@ My PhD research focuses on spatial variations in population aging and the labor 
 
 ## Research Experience
 
-**Euoprean Doctoral School of Demography**
+**European Doctoral School of Demography**
 
 - Centre d'estudis Demogràfics
-- Research education in demography finsihed with a thesis on post-retirement employment in Germany
+- Research education in demography finished with a thesis on post-retirement employment in Germany
 - [September 2021 - July 20222]{.date}
 
 **Visiting Student**
 
-- Oxford Institue of Population Ageing, UK
+- Oxford Institute of Population Ageing, UK
 - Master’s thesis research on population ageing and local labor markets in Germany
 - [November 2020 - March 2022]{.date}
 
-**NEURUS Prgoram**
+**NEURUS Program**
 
-- University of Califorina Irvine, USA
+- University of California Irvine, USA
 - Research on the development of cannabis-oriented business services in Los Angeles.
-- [Januar 2018 - May 2018]{.date}
+- [January 2018 - May 2018]{.date}
