--- a/teaching.qmd
+++ b/teaching.qmd
@@ -8,9 +8,14 @@ I began teaching at the university level in March 2023. Moving forward, my goal 
 
 ## Courses - Lund University
 
-### Applied methods in planning
 
-I taught the module on quantitative methods and statistics, which encompassed lectures, seminars, and lab exercises. Throughout the course, I delivered a total of 12 hours of in-classroom teaching. I also had responsibility for grading assignments and assessments.
+### Research Methodology Human Geography/Human Ecology
+
+I taught a module on quantitative methods and statistics for both the Human Geography and Human Ecology course. This encompassed lectures, seminars, and lab exercises with a total of 19 hours of in-classroom teaching. I also had responsibility for grading assignments.
+
+### Applied methods in planning (Spring and Autumn)
+
+I taught the module on quantitative methods and statistics, which encompassed lectures, seminars, and lab exercises. Throughout the course, I delivered a total of 12 hours of in-classroom teaching. I also had responsibility for grading assignments.
 
 ## Supervision - Lund University
 
@@ -20,4 +25,4 @@ I supervised two students for their degree projects in Human Geography as part o
 
 ## Thesis Evaluation - EDSD/CED
 
-I was a member of the evaluation committee of an oral thesis defense within the framework of the European Doctoral School of Demography (EDSD) at the Centre for Demographic Studies in Barcelona (Spain).
+I was a member of the evaluation committee of a thesis defense for the European Doctoral School of Demography (EDSD) at the Centre for Demographic Studies in Barcelona (Spain).
